- Add tab format setting - Add context menu entry

--- a/code/bg.html
+++ b/code/bg.html
@@ -1,1 +1,1 @@
-<html><head></head><body><textarea id='b'></textarea></body><script src="bg.js" type="text/javascript"></script></html>
+<html><head></head><body><textarea id='b'></textarea><script src="bg.js" type="text/javascript"></script></body></html>
