--- a/code/bg.html
+++ b/code/bg.html
@@ -1,1 +1,1 @@
-<html><head></head><body><textarea id='b'></textarea><script src="bg.js" type="text/javascript"></script></body></html>
+<html><head></head><body><textarea id='b'></textarea><script src="common.js"></script><script src="bg.js"></script></body></html>
