add copy-buttons section

--- a/popup.html
+++ b/popup.html
@@ -14,24 +14,29 @@
   </head>
   <body>
     <header>Copy</header>
-    <button
-      id="copy-tab-btn"
-      class="button-primary"
+    <div
+      id="copy-buttons"
+      style="display: none"
     >
-      This tab
-    </button>
-    <button
-      id="copy-window-tabs-btn"
-      class="button-primary"
-    >
-      This window's tabs
-    </button>
-    <button
-      id="copy-all-tabs"
-      class="button-primary"
-    >
-      All tabs
-    </button>
+      <button
+        id="copy-tab-btn"
+        class="button-primary"
+      >
+        This tab
+      </button>
+      <button
+        id="copy-window-tabs-btn"
+        class="button-primary"
+      >
+        This window's tabs
+      </button>
+      <button
+        id="copy-all-tabs"
+        class="button-primary"
+      >
+        All tabs
+      </button>
+    </div>
     <div
       id="format-section"
       style="display: none"
