rename selected-format -> primary-format

--- a/popup.html
+++ b/popup.html
@@ -44,10 +44,10 @@
       <div class="format-header">
         <span id="copy-as-label">Copy as:</span>
         <button
-          id="selected-format-btn"
+          id="primary-format-btn"
           class="button-secondary"
         >
-          <span id="selected-format-label">URL</span>
+          <span id="primary-format-label">URL</span>
           <span class="icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
