--- a/popup.html
+++ b/popup.html
@@ -47,7 +47,12 @@
           id="primary-format-btn"
           class="button-secondary"
         >
-          <span id="primary-format-label">URL</span>
+          <span
+            id="primary-format-label"
+            class="button-label"
+          >
+            URL
+          </span>
           <span class="icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
