update copy button ids to scopes

--- a/popup.html
+++ b/popup.html
@@ -19,13 +19,13 @@
       style="display: none"
     >
       <button
-        id="copy-tab-btn"
+        id="copy-tab"
         class="button-primary"
       >
         This tab
       </button>
       <button
-        id="copy-window-tabs-btn"
+        id="copy-window-tabs"
         class="button-primary"
       >
         This window's tabs
