--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/icons/favicon-16x16.png"
+    />
+    <link
       rel="icon"
       href="/icons/logo.ico"
     />
