change "primary" format to "default"; infer default format id from first selectable format id instead of maintaining separate value

--- a/popup.html
+++ b/popup.html
@@ -55,11 +55,11 @@
       <div class="format-header">
         <span id="copy-as-label"></span>
         <button
-          id="primary-format-btn"
+          id="default-format-btn"
           class="button-secondary"
         >
           <span
-            id="primary-format-label"
+            id="default-format-label"
             class="button-label"
           ></span>
           <span class="icon">
