make copy buttons dynamic per user-configured scopes; add consideration for new scope "all windows and tabs"

--- a/popup.html
+++ b/popup.html
@@ -84,20 +84,7 @@
     <div
       id="copy-buttons"
       style="display: none"
-    >
-      <button
-        id="copy-tab"
-        class="button-primary"
-      ></button>
-      <button
-        id="copy-window-tabs"
-        class="button-primary"
-      ></button>
-      <button
-        id="copy-all-tabs"
-        class="button-primary"
-      ></button>
-    </div>
+    ></div>
     <div
       id="format-section"
       style="display: none"
