fix stroke-width attribute

--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
             viewBox="0 0 24 24"
             fill="none"
             stroke="currentColor"
-            strokeWidth="2"
+            stroke-width="2"
           >
             <line
               x1="21"
