--- a/release-notification.html
+++ b/release-notification.html
@@ -27,7 +27,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Tab Copy v4</title>
+    <title>Tab Copy upgrade</title>
   </head>
   <body>
     <div id="app"></div>
